--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>springcloud-gateway-only</module>
         <module>springcloud-service</module>
         <module>springcloud-gateway-discovery</module>
+        <module>springcloud-gateway-my</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -63,13 +64,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
 
 </project>
